--- a/003_LibrarySystem_WebApp/src/main/resources/application.properties
+++ b/003_LibrarySystem_WebApp/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=librarian
 spring.datasource.password=book
 
 spring.jpa.show-sql=true
+
+spring.mvc.view.prefix=/WEB-INF/templates/
+spring.mvc.view.suffix=.jsp
